--- a/PingMonitor.csproj
+++ b/PingMonitor.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8B2C3F1A-9D4E-4F5B-A6C7-1E2D3F4A5B6C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>PingMonitor</RootNamespace>
-    <AssemblyName>PingMonitor</AssemblyName>
+    <AssemblyName>PingMonitor SA.v1 — أداة مراقبة البنق</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
